--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "WebPortfolio",
+  "name": "webpack-simple-starter",
   "version": "1.0.0",
-  "description": "Webportfolio",
+  "description": "A simple webpack starter without framework (Like Vue, React, Angular, etc.)",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "node build/dev-server.js",
+    "dev": "node build/dev-server.js",
     "build": "node build/build.js"
   },
-  "author": "Yagnik",
+  "author": "Sinan Mutlu <sinanm17@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^7.1.6",
@@ -61,8 +61,8 @@
     "popper.js": "^1.12.9"
   },
   "engines": {
-    "node": ">= 8.9.4",
-    "npm": ">= 6.1.0"
+    "node": ">= 8.1.3",
+    "npm": ">= 5.0.3"
   },
   "browserslist": [
     "> 1%",
