Added work experience

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "portfolio"
   ],
   "author": "Yagnik",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/yvadher/webPortfolio/issues"
   },
