Added work experiences

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
     "git.ignoreLimitWarning": true,
     "cSpell.words": [
         "bluemix",
+        "burnaby",
+        "cjsf",
         "cuepath",
+        "pages",
         "techstars"
     ]
 }
